--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -13,6 +13,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>MERN BLOG</title>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="HORIZONTAL" data-vanity="lenox-amwayi" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ke.linkedin.com/in/lenox-amwayi?trk=profile-badge">Lenox Amwayi</a></div>
+              
 
 </head>
 
